--- a/projects/novo-elements/src/elements/header/Header.scss
+++ b/projects/novo-elements/src/elements/header/Header.scss
@@ -28,7 +28,7 @@ novo-header {
     flex-direction: row;
     align-items: center;
     gap: 0.8rem;
-    padding: 0.75rem;
+    padding: 1.5rem;
     box-sizing: border-box;
     // line-height: 4rem;
 
